fixed image linking

--- a/masters/MobileProgramming/teoria/2. RMA.md
+++ b/masters/MobileProgramming/teoria/2. RMA.md
@@ -2,7 +2,7 @@
 
 Android segue una architettura a **strati**, dove ogni livello offre  servizi a quello superiore nascondendo la complessità del livello inferiore.  
 
-![architettura android](../images/android_full_arch.png)
+![architettura android](../../images/android_full_arch.png)
 
 1. Hardware:  
     Metallo nudo, sono le componenti fisiche del nostro dispositivo, come processore, memoria, fotocamera ecc... 
@@ -96,7 +96,7 @@ Sarà poi il sistema Android a decidere quale versione di saluto mostrare in bas
 
 ### Struttura dell'albero delle risorse
 
-![albero risorse android](../images/resource_tree_android.png)  
+![albero risorse android](../../images/resource_tree_android.png)  
 
 All'interno di un progetto avremo: 
 - una cartella `src` $\rightarrow$ contine il codice Java/Kotlin
@@ -125,7 +125,7 @@ I qualificatori si possono usare e combinare a seconda delle necessità, questo 
 
 <center>
 
-![algritmo risorse](../images/algo_risorse_android.png)  
+![algritmo risorse](../../images/algo_risorse_android.png)  
 
 </center>
 
@@ -150,7 +150,7 @@ L'**SDK** (**Software Development Kit**) di Andoid fornisce componenti per costr
 
     <center>
 
-    ![fragments Android](../images/fragments_android.png)
+    ![fragments Android](../../images/fragments_android.png)
 
     </center>
 
@@ -257,7 +257,7 @@ Concetti chiave:
 
 <center>
 
-![tipi di layout](../images/layout_types_for_views.png)
+![tipi di layout](../../images/layout_types_for_views.png)
 
 </center>
 
