activities lifecycle and android manifest added

--- a/masters/MobileProgramming/teoria/2. RMA.md
+++ b/masters/MobileProgramming/teoria/2. RMA.md
@@ -270,3 +270,155 @@ Per costruire Layout che funzionano bene su ogni dispositivo dobbiamo usare unit
 2. **cp (Scalable Pixel)** : È identico al dp ma rispetta anche la dimensioni del testo preferita dall'utente $\rightarrow$ va usato ogni volta che abbiamo del testo nella nostra app!
 
 
+<br>
+
+--- 
+
+<br>
+
+
+## Ciclo di vita delle Activity
+
+Una Activity è una singola schermata con cui l'utente può interagire, una nostra app sarà quindi composta da un insieme di activity.  
+
+Dire che un app è in **esecuzione** equivale a dire che le sue componenti (le activity) vengono create, avviate, messe in pausa e distrutte dal sistema operativo a seconda delle azioni dell'utente.
+
+
+Il mondo mobile è caotico e pieno di interruzioni, abbiamo bisogno di gestire questi eventi improvvisi per garantire una buona esperienza utente.  
+
+<br>
+
+Il ciclo di vita di una activity è un **contratto** tra la activity e il sistema operativo.  
+Il OS avvisa prima che accada qualcosa di importante chimando metodi specifici, dovremo implementare la risposta a questi metodi per reagire in modo appropriato.  
+
+
+<center>
+
+![ciclo vita activity](../../images/activity_lifecycle.png)
+
+</center>
+
+
+1. `onCreate()`:  
+    Viene chiamato una sola volta quando viene creata l'activity per la prima volta, fa le operazioni di inizializzazione:
+    - importa layout di interfaccia: `setContentView()`
+    - inizializza le variabili: le View nel layout
+    Alla fine di onCreate() l'activty è creata ma ancora non visibile all'utente  
+
+<br>   
+
+2. `onStart()`:  
+    Viene chiamato subito dopo onCreate() quando stiamo per passare o tornare in primo piano (si avviano processi legati all'aggiornamento della UI).    
+    L'activity a questo punto a visibile ma ancora non interagibile.  
+
+
+<br>
+
+3. `onResume()`:  
+    Viene chiamato subito dopo onStart(), l'activity ora si trova in primo piano ed è nello stato _Activity Running_, qui va avviato tutto ciò che richiede una interazione attiva (animazioni, audio, fotocamera, GPS, ...)
+
+
+<br>
+
+4. `onPause()`:  
+    Viene chiamato quando l'activity sta per perdere il primo piano, in questo stato vanno fatte operazioni molto veloci, va messo in pausa tutto ciò che consuma CPU o batteria e che non ha senso tenere in vita se l'utente non sta interagendo attivamente con l'app.  
+    L'activity è parzialmente visibile ma sta perdendo il focus: da questo punto può otnrare in onResume() o passare in onStop().  
+
+
+<br>
+
+5. `onStop()`:  
+    Invocato quando l'activity non è più visibile all'utente, è stata avviata un'altra activity che ha preso il primo piano.  
+    Qui si rilasciano le risorse più pesanti che non servono se la UI non è visibile, l'activity è ancora in memoria ma _congelata_ in background.  
+
+<br>
+
+6. `onDestroy()`:  
+    Invocato poco prima che l'activity vennga distrutta, accade quando l'utente clicca il tasto 'indietro' o quando il OS decide di uccidere questa activity per recuperare memoria.  
+    È il momento per pulire tutto, vanno rilasciate le risorse allocate in onCreate().  
+
+
+<br>
+
+7. `onRestart()`:  
+    Invocato quando un activity dallo stato Stopped sta per esere avviata nuovamente, ossia prima di passare in onStart().  
+
+
+
+### Inversion of Control  (IoC)
+
+I metodi del ciclo di vita delle activity vengono registrati come **callback**, e seguono il pattern IoC/Observer.   
+I metodi non verranno mai chiamati esplicitamente dal programmatore, dovremo solo fare l'override e implementazione di questi metodi; sarà poi il sisteam Android (in particolare ActivityManager) a chiamare questi metodi per noi nel momento giusto.    
+Il ciclo di vita è il modo in cui Android implementa il pattern IoC/Observer, dandoci dei "ganci" (hooks) specifici in cui inserire il nostro codice per gestire lo stato della nostra schermata in un ambiente imprevedibile e controllato dal sistema.  
+
+
+<br>  
+
+
+### Salvare lo stato e architettura dell'app:  
+
+Nel mondo mobile le cose possono essere imprevedibili e la nostra app potrebbe essere chiusa improvvisamente (dal OS o utente), occorre un meccanismo _fail-safe_ per salvare i dati temporanei importanti prima che l'activity venga distrutta e per ripristinarli una volta che viene ricreata.  
+
+
+### Bundles:  
+
+Sono delle HashMap dove possiamo mettere oggetti ed etichettarli con chiavi
+
+```java
+// per salvare i dati 
+b.putFloat("punteggio_giocatore", 123.45f);
+
+// per recuperare i dati 
+float punteggio = b.getFloat("punteggio_giocatore");
+```
+
+Abbiamo due callback importanti in cui vengono usati i bundle: 
+1. `onSaveInstanceState(Bundle outBundle)`:  
+    Il sistema chiama quanto metodo quando l'activity è messa a rischio di distruzione, viene invocato quando l'utente lacia la activity ma NON quando la chiude esplicitamente.  
+    In questo stoato il sistema passa un `Bundle` vuoto e noi dovremo riempirlo con tutti i dati temporanei che vogliamo salvare (es: testo inserito in una textbox, punteggio attuale di un gioco, ...)  
+
+<br>
+
+2. Activity ricreata dal sistema dopo distruzione:  
+    Il bundle che avevamo riempito prima di essere stati distrutti ci viene restituito in:
+    1. `onCreate(Bundle savedInstanceState)`
+    2. `onRestoreInstanceState(Bundle inBundle)` che è un altra callback chiamata subito dopo di onStart().   
+    Di solito il ripristino avviene in onCreate, quindi la prima cosa da fare è controllare se savedInstanceState è null $\rightarrow$ se lo è allora la nostra activity è stata avviata per la prima volta ; altrimenti significa che l'activity è stata ricreata e che possiamo estrarre i dati dal Bundle per ripristinare lo stato dell'activity.  
+
+
+<br>
+
+## Android Manifest
+
+La nostra app non è strutturata come un blocco monolitico ma come insieme di componenti indipendenti, quelle studiate fin ora sono state le Activity, ma ci sono anche altre componenti fondamentali:
+- Services: per operazioni lunghe in background in cui non serve l'interfaccia utente (scaricare un file, suonare musica, ...)  
+- Broadcast Receivers: sono gli ascoltatori di eventi del sistema (batteria quasi scarica, il dispositivo ha finito di avviarsi, ...)
+- Content Providers: per condividere dati con altre app in modo sicuro
+- Intents: messaggi usati per fare comunicare diverse componenti
+
+Ciò che tiene insieme tutti questi pezzi e li presenta la OS come una applicazioni unica è un file chiamato `AndroidManifest.xml`  
+
+<br>
+
+Al suo interno si deve dichiarare:  
+- nome dell'app 
+- le componenti che la costituiscono (ogni Activity, Service, ...)
+- i permessi di cui l'app ha bisogno
+- caratteristiche hardware richieste  
+
+
+```xml
+<activity android:name=".MainActivity">
+    <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+</activity>
+```
+
+- `<activity android:name=".MainActivity">`: Dichiara al sistema che esiste una classe Activity chiamata MainActivity  
+- `<intent-filter>`: Il filtro di intents dichiara per quali tipi di intent (messaggi) questa activity è in grado di rispondere 
+- `<action android:name="android.intent.action.MAIN" />`: Indica che questa activity è un punto di ingresso principale per un'applicazione  
+- `<category android:name="android.intent.category.LAUNCHER" />`: Mostra l'icona di questa activity nel launcher del telefono (la schermata home)  
+
+---
