--- a/masters/MobileProgramming/teoria/3. Intents.md
+++ b/masters/MobileProgramming/teoria/3. Intents.md
@@ -9,15 +9,15 @@ Serve per fare un **late runtime binding** tra un componente e un altro.
 
 _nota:_ un binding è un collegamento tra (una chiamata a una funzione) e (codice specifico che deve essere eseguito), esistono due tipi di binding:
 1. Early Binding: Modo classico che corrisponde a:  
-    `myObj obj = new myObj(); obj.doSomething();` Il compilatore sa esattamente cosa fare al momento dela compilazione, quale pezzo di codice eseguire, il binding è fatto a tempo di compilazione.  
+    `myObj obj = new myObj(); obj.doSomething();` Il compilatore sa esattamente cosa fare al momento della compilazione, quale pezzo di codice eseguire, il binding è fatto a tempo di compilazione.  
 2. Late Runtime Binding: Il collegamento tra la richiesta e il codice che la esegue non avviene a tempo di compilazione ma avviene a tempo di **esecuzione** (runtime), cioè mentre l'app sta girando sul telefono   
 
 Il meccanismo di late runtime binding è ciò che consente ad Android di essere flessibile e interconnesso, permette alle app di collaborare senza conoscersi.
 
 <br>
 
-**es:** la nostra app crea un itent per 'aprire una pagina web', a nostra app non sa quali browser siano installati e non ne implementa uno.  
-Invierà un intent che esprime il voler aprire la pagina web e il sistema a _runtime_ guarderà l'intent - cercherà tra le app installate una in gradi di eseguire quel tipo di richiesta e quando la trova farà il **binding**, la richiesta dell'app viene collegata al codice specifico dell'app che sa aprire pagine web (browser).  
+**es:** la nostra app crea un itent per 'aprire una pagina web', la nostra app non sa quali browser siano installati e non ne implementa uno.  
+Invierà un intent che esprime il voler aprire la pagina web e il sistema a _runtime_ guarderà l'intent - cercherà tra le app installate una in grado di eseguire quel tipo di richiesta e quando la trova farà il **binding**, la richiesta dell'app viene collegata al codice specifico dell'app che sa aprire pagine web (browser).  
 
 <br>
 
@@ -34,12 +34,12 @@ Activity A manda intent per avviare la Activity B.
 
 <br>
 
-2. **Intent Implicito:** Dichiariamo l'operazione che vogliammo fare e il sistema troverà l'app migliore per soddisfare questa richiesta (es del browser).  
+2. **Intent Implicito:** Dichiariamo l'operazione che vogliammo fare e il sistema troverà l'app migliore per soddisfare questa richiesta (esempio del browser).  
 
 
 
 ### Intent Espliciti:  
-Gli intent espliciti sono spesso usati per avviare un'altra activity per fargli fare un lavoro e **ricevere un risultato indietro**.  
+Gli intent espliciti sono spesso usati per avviare un'altra activity, fargli fare un lavoro e **ricevere un risultato indietro**.  
 
 <center>
 
@@ -54,11 +54,11 @@ Il sistema distrugge SecondAct riportando in primo piano FirstAct e consegnando 
 
 <center>
 
-**Codice Intent Esplicito**
+**Codice Intent Esplicito** 
 
 </center>
 
-### Lato Sorgente - codice che invia la richiesta
+### First Activity: codice che invia la richiesta
 
 ```Java 
 Intent i = new Intent(this, SecondAct.class);
@@ -74,7 +74,7 @@ SecondAct è la classe esatta dell'activity di destinazione, stiamo dando un ind
 (3) startActivityForResult è il comando chiave, avvia la seconda activity ma si aspetta una risposta, il parametro `i` è l'intent che abbiamo preparato mentre `1` è il requestCode che ci permette di identificare a quale delle nostre richieste si riferisce quello specifico risultato (utile per distinguere risultati quando lanciamo più intent).  
 
 
-### Codice che riceve la risposta
+### First Activity: codice che riceve la risposta
 
 ```Java
 @Override
@@ -88,7 +88,9 @@ public void onActivityResult(int requestCode, int resultCode, Intent data){
 }
 ```
 
-(1) è il metodo di callback, `requestCode` è l'ID che avevamo inviato; `resultCode` ci dice se l'operazione è andata a buon fine; `data` è un Intent che arriva da SecondAct contenente i dati della risposta.  
+(1) è il metodo di callback (IoC), `requestCode` è l'ID che avevamo inviato; `resultCode` ci dice se l'operazione è andata a buon fine; `data` è un Intent che arriva da SecondAct contenente i dati della risposta.  
+
+**nota:** tutto il codice soprastante è in un unico file  
 
 
 
@@ -101,7 +103,7 @@ String ops = i.getExtra('Data');
 ```
 
 (1) Recupera l'intent che ha causato l'avvio di questa activity
-(2) Estra il valore dal Bundle allegato all'intent usado la chiave corretta (riceve 'stringa passata')   
+(2) Estrae il valore dal Bundle allegato all'intent usado la chiave corretta (riceve 'stringa passata')   
 
 
 
@@ -115,9 +117,219 @@ public void finish(){
 }
 ```
 
-(1) ovverride di finish 
-(2) Crea un nuovo intent _vuoto_ che sarà il nostro 'veicolo' per la risposta, non serve specificare il destinatario in quanto il sistema sa già che deve tornare a chi l'ha chiamata  
-(3) Allega i dati della  risposta al nuovo intent   
-(4) Dice al sistema che l'operazione ha avuto successo 
-(5) Chiama il metodo finish originale per chiudere l'activity  
+(1) ovverride di finish   
 
+(2) Crea un nuovo intent _vuoto_ che sarà il nostro 'veicolo' per la risposta, non serve specificare il destinatario in quanto il sistema sa già che deve tornare a chi l'ha chiamata  
+
+(3) Allega i dati della  risposta al nuovo intent   
+
+(4) Dice al sistema che l'operazione ha avuto successo  
+
+(5) Chiama il metodo finish originale per chiudere l'activity   
+
+
+<br>
+
+### Campo `data` degli intent 
+
+Un intent ha una componente separato dagli `extras` chiamato `data` che serve per passare riferiemnti a dati specifici. Se una activity deve operare su un dato grande (tipo immagine o video) o su un dato che non possediamo direttamente (tipo in rubrica o su un file cloud) non possiamo passare tale dato direttamente nell'intent (non lo possediamo o è troppo pesate).  
+
+Il campo `data` serve a passare oggetti di questa natura, in quanto contiene un oggetto `Uri` che serve per passare identificativi a oggetti (li passiamo per riferimento).  
+
+```java
+// pasiamo un indirizzo web 
+i.setData(Uri.parse("https://www.unimore.it"))
+
+// passiamo file locale sul dispositivo
+i.setData(Uri.fromFile(new File("/sdcard/fotografia.jpg")));
+```
+
+<br>
+
+## Intent Impliciti  
+
+_situazione:_ Ho un app social network e ho bisogno che il mio utente scatti una foto da inserire nel suo profilo $\rightarrow$ **NON** devo scrivere da zero il codice per interagire con l'hardware della fotocamera, sul telefono ho già un app che fa tutto ciò, quindi devo **delegare** questo compito a tale app.  
+Non so però quale app per scattare foto abbia installato l'utente (fotocamera google, samsung o di terze parti?) $\rightarrow$ la soluzione è usare un intent implicito.  
+
+L'intent implicito serve per chiedere all'intero sistema chi può esaudire la mia richiesta, disinteressandomi dell'attore stesso e aspettando solo un risultato.  
+
+```java
+@Override
+public void onClick(View v) {
+    Button bottonePremuto = ((Button)v);
+    if(bottonePremuto.equals(bottoneScatta)){
+        //creiamo un intent implicito...
+        Intent intent = new Intent(android.provider.MediaStore.ACTION_IMAGE_CAPTURE);
+        activity.startActivityForResult(intent, 1);
+    }
+}
+``` 
+
+Il dato che ho richiesto lo ottengo dal metodo onActivityResult, il risultato di un generico intent finisce in `data`.  
+
+```java
+@Override
+protected void onActivityResult(int requestCode, int resultCode, Intent data) {
+    // Ecco dove è finita la nostra foto.
+if (requestCode == 1 && resultCode == Activity.RESULT_OK) {
+    Bundle extras = data.getExtras();
+    Bitmap imageBitmap = (Bitmap) extras.get("data");
+    // il campo extras mi restituisce una thumbnail dell'immagine...
+    image.setImageBitmap(imageBitmap); //qua avviene il caricamento vero e proprio...
+    }
+}
+```
+
+Il pattern per intent impliciti è sempre:  
+
+<center>
+
+**Azione + [Dati] = Intent implicito**
+
+</center>
+
+
+## Android Manifest e Intent filters : 
+
+Il manifest è il registro centrale del sistema, serve al sistema per sapere quali app possono gestire determinati compiti.  
+Le app devono dichiarare queste capability nel manifest seguendo la sintassi universale.  
+
+```xml
+<activity android:name=".activity.SignInActivity" ... >
+    <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+</activity>
+
+<activity android:name=".activity.CategorySelectionActivity" ... />
+
+<activity android:name=".activity.QuizActivity" ... />
+```
+
+1. Ogni tag <activity> registra una schermata presso il sistema, senza questa l'activity non esiste per Android, è quindi necessaria sia per intent espliciti che impliciti
+2. il tag **<intent-filter>** è cruciale, ed è il modo in cui un activity mette a disposizione del sistema le sue capability.  
+
+<br>
+
+---
+
+Quando si fa un intent **esplicito** il sistema guarda il manifest per assicurarsi che esista, ignora completamente i filtri.  
+
+Quando si fa un intent **implicito** (`new Intent(Intent.ACTION_VIEW, uri)`), il sistema legge i manifest di tutte le app cercando un <intent-filter> che contenga il tag desiderato (`<action android:name="android.intent.action.VIEW" />`) e che sia compatibile con i dati dell'Uri.   
+
+--- 
+
+### Analisi del codice XML nel Manifest
+
+- `SignInActivity` ha un intent filter per `MAIN` e `LAUNCHER`, questo è un intent implicito che risponde alla richiesta del OS quando un utente clicca l'icona dell'app, è il punto di ingresso pubblico dell'app.  
+
+- `CategorySelectionActivity` e `QuizActivity` non hanno intent filters, significa che nessun'app esterna può avviarle, l'unico modo per aprire è tramite un intent esplicito proveniente da un'altra activity della stessa applicazione (ad esempio, SignInActivity avvierà CategorySelectionActivity dopo un login corretto).   
+
+Le dichiarazioni <activity> rendono i componenti noti al sistema, e i tag <intent-filter> li pubblicizzano come capaci di rispondere a specifiche richieste implicite, permettendo la collaborazione tra app.  
+
+<br>
+
+# Gestione degli eventi:  
+
+Una volta costruita la nostra interfaccia con view e layout ci serve un meccanismo per ascoltare le azioni dell'utente sulle view.  
+
+Il sistema di ascolto sarà composto da: 
+- Listener - Componente ascoltatore: È il cuore del sistema, per ogni tipo di evento esiste un'interfaccia java specifica, noi creiam un oggetto listener che implementa questa interfaccia.  
+- Registrazione: Associamo il nostro oggetto listener alla view che vogliamo monitorare   
+    `myButton.setOnClickListener(myListener);`  
+- Callback: L'interfaccia del listener ha metodi di callback, quando l'evento si verifica il OS chiama automaticamente il metodo di callback sul nostro listener.  
+
+
+<br>
+
+La gestione di eventi può essere fatta in due modi:
+1. **Da file XML:**  
+ È il modo più semplice per gestire eventi, consigliato per eventi semplici e comuni come il click di un bottone.  
+    Nel file XML all'interno del tag \<button> si aggiunge un attributo speciale:  
+    `android:onClick="mostraDialogo"`:    
+    - onClick è l'attributo per le'evento di click
+    - mostraDialogo è il nome del metodo che volgiamo venga eseguito al click del bottone.  
+
+    Nel file Java dell'activity dovremo implementare un metodo che corrisponda esattamente alla firma definita nel XML, deve avere lo stesso nome utilizzato nel file XML e accettare un solo parametro di tipo View che serve da riferimento alla view che ha scatenato l'evento (nell'esempio il bottone).  
+
+<br>
+
+2. **In codice Java:**  
+    È l'approccio standard, più potente e flessibile, segue un processo a 3 passaggi:
+    1. Ottenere riferimento alla view:  
+        `Button button = (Button)findViewById(R.id.bottone1)`; trova il bottone tra tutte le view che compongono il nostro layout   
+        Restituisce una view generica, per questo serve fare il casting a bottone.  
+    
+    2. Associare il listener:  
+        `setOnClickListener()` è il metodo che registra un ascoltatore per l'evento di click su quello specifico bottone.  
+        `new ClasseAscoltatrice()` crea un'istanza di una classe che abbiao definito noi e che sa gestire l'evento  
+    
+    3. Implementare il listener:  
+        ```java
+        public class ClasseAscoltatrice implements View.OnClickListener {
+            @Override
+            public void onClick(View v) {
+                // La logica da eseguire al click va qui!
+            }
+        }        
+        ```  
+        Creaiamo una classe che implementa l'interfaccia View.OnClickListener (quella che passiamo poi come istanza a setOnClickListener).  
+        Faremo l'override del metodo di interesse con la nostra logica e tale codice verrà eseguito quando il bottone a cui è stato associato questo listener verrà cliccato.  
+
+
+### Distinguere view della stessa categoria: 
+
+Se abbiamo più button che compongono il nostro layout vogliamo un comportamento diverso a seconda di quale button viene cliccato, possiamo farlo da:
+- **XML:**  
+    dando un `android:onClick` diverso a ogni bottone e dedicando un metodo Java a ognuno (semplice ma porta a tanti piccoli metodi).  
+
+- **codice:**   
+    - listener separati: Creare una classe listener per ogni bottone, soluzione pulita ma in presenza di tanti bottoni diventa verbosa 
+    - listener unico: associa lo stesso listener a tutti i bottoni, e dentro il metodo on click del listener usiamo il parametro view per capire quale bottone è stato cliccato, gestiamo la logica per i diversi bottoni con if-else o switch case.  
+
+- **classe anonima:**  
+    È un pattern molto comune e comodo, invece di definire una classe separata (su un file a parte) la definiamo e la istanziamo al volo direttamente dove serve.  
+    ```java
+    bottone.setOnClickListener(new View.OnClickListener() {
+        @Override
+        public void onClick(View v) {
+            // logica specifica assegnata a “bottone”
+        }
+    });
+    ```
+
+<br>
+
+
+## Gestures e `GestureDectector`
+
+Le interazioni con un touchscreen prevedono eventi diversi e complessi, dobbiamo avere la capacità di poter distinguere tra un singolo tocco, un doppio tocco, un tocco prolungato, un trascinamento veloce, uno scroll lento o un pinch per fare zoom.  
+
+Rilevare queste gestures non è banale infatti sarà il framework android a fornirci la soluzione pronta tramite il **`GestureDetector`**  e le API che mette a disposizione.  
+
+Il gesture detector è un traduttore di eventi, una sorta di listener. Il suo lavoro è ricevere gli eventi di tocco grezzi e interpretarli a basso livello, notificando quando riconosce un gesto di alto livello (tipo longpress, fling, ...).  
+
+
+### Come funziona il GestureDetector
+
+- Si crea una istanza di `GestureDetector` 
+- Si fornisce un listener da noi implementato 
+- Intercettiamo eventi di tocco grezzi e li passiamo al `GestureDetector`
+- Il `GestureDetector` si occupa della logica complessa (calcolare velocità, tempi, distanze) e quando riconosce un gesto, chiamerà il metodo di callback appropriato sul nostro listener.  
+
+
+**alcune callback del gesture detector**:  
+
+<center>
+
+![gestureDetector callbacks](../../images/gesture_detector_callbacks.png)
+
+</center>
+
+_nota:_ gli eventi indiiduati non sono mutuamente esclusivi, un doubleTap è di fatto due singleTap $\rightarrow$ l'API ci fornirà strumenti per gestire questo.  
+
+Notiamo che i metodi di callback ricevono come parametro un `MotionEvent e` che descrive un singolo evento di tocco.  
+
+
+Notiamo anche che molti di questi metodi restituiscono un valore booleano, questo è fondamentale in quanto serve a controllare **la propagazione dell'evento**.  
