--- a/masters/MobileProgramming/teoria/3. Intents.md
+++ b/masters/MobileProgramming/teoria/3. Intents.md
@@ -327,9 +327,92 @@ Il gesture detector è un traduttore di eventi, una sorta di listener. Il suo la
 
 </center>
 
-_nota:_ gli eventi indiiduati non sono mutuamente esclusivi, un doubleTap è di fatto due singleTap $\rightarrow$ l'API ci fornirà strumenti per gestire questo.  
+_nota:_ gli eventi individuati non sono mutuamente esclusivi, un doubleTap è di fatto due singleTap $\rightarrow$ l'API ci fornirà strumenti per gestire questo.  
 
 Notiamo che i metodi di callback ricevono come parametro un `MotionEvent e` che descrive un singolo evento di tocco.  
 
-
 Notiamo anche che molti di questi metodi restituiscono un valore booleano, questo è fondamentale in quanto serve a controllare **la propagazione dell'evento**.  
+
+
+<br>
+
+### Propagazione dell'evento: 
+
+Ricoridiamo che layout e  view sono organizzati tramite una gerarchia ad albero.  
+Quando si rileva un evento di tocco qualcuno deve gestirlo, in android il processo funziona in questo modo:  
+
+Il sistema consegna l'evento di tocco (motionEvent) al nodo più profondo della gerarchia che si trova sotto il dito dell'utente, a tale nodo viene data la prima possibilità di gestire l'evento, viene invocato il suo listener, tale listener deve prendere una decisione e restituire True o False.  
+
+1. Evento consumato: Il codice del nostro listener esegue la sua logica e restituisce True, l'evento (motionEvent) si ferma qui, gli altri nodi _non sapranno mai_ che è avvenuto un tocco.  
+2. L'Evento risale la gerarchia: Il listener di questo nodo restituisce False, l'evento non risulta consumato, il sistema lo passa al livello successivo, ossia al genitore del nodo. L'algoritmo di propagazione continua in questo modo risalendo da figlio verso padre (mai verso i fratelli) fino a quando non viene consumato.  
+
+
+
+
+---
+
+### Struttura di un progetto Android
+
+
+Abbiamo due componenti fondamentali
+
+1. Codice Java:  
+    Dentro la cartella `app/src/main/java/com/nome_app/` si creano i file `.kt`, ogni activity dell'app sarà un file **separato**.  
+
+2. Risorse:  
+    Dentro `app/src/main/res/` abbiamo le sottocartelle delle risorse (drawable, values, layout), e dentro la cartella `layout` avremo i file XML che definiscono l'albero delle view (potremmo avere un file `activity_main.xml` che descrive l'interfaccia della MainActivity).  
+
+Per collegare il codice Java/Kotlin al layout si usa il metodo onCreate() definito nell'activity: 
+
+```java
+@Override
+protected void onCreate(Bundle savedInstanceState) {
+    super.onCreate(savedInstanceState);
+    // QUESTA È LA RIGA CHE COLLEGA I DUE MONDI!
+    setContentView(R.layout.activity_main);
+    // ... altro codice, come la creazione del GestureDetector ...
+}
+```
+
+- `setContentView()` gonfia (inflates) il file XML e costruisce l'abero di View e Layout definito in esso e lo attacca alla activity, da questo momento l'activity ha una sua gerarchia di views.  
+
+Esistono due modi principali per gedtire eventi/gesti:
+
+1. Un Listener per ogni view:  
+    Si usa per eventi semplici e specifici di un componente (come click di un bottone)  
+    ```java
+    // Dentro onCreate(), DOPO setContentView()
+    Button mioBottone = findViewById(R.id.id_del_bottone);
+    RelativeLayout mioLayout = findViewById(R.id.id_del_layout);
+
+    mioBottone.setOnClickListener(new View.OnClickListener() {
+        @Override
+        public void onClick(View v) {
+            // Questo codice si esegue SOLO se clicco su mioBottone
+            // Qui non ha senso restituire true/false
+        }
+    });
+
+    // Potrei mettere un listener anche sul layout genitore
+    mioLayout.setOnTouchListener(new View.OnTouchListener() {
+        @Override
+        public boolean onTouch(View v, MotionEvent event) {
+            // Qui posso decidere se consumare l'evento
+            return true; // L'evento si ferma qui
+        }
+    });
+    ```
+
+
+<br>
+
+2. L'activity è UNICO listener globale:  
+    Viene usato principalmente per le gesture, in quanto un gesto è spesso legato all'intera schermata e non a un singolo componente (swipe o scroll).  
+    L'activity si candida come Listener e intercetta tutto, in questi casi conviene usare un GestureDetector per tradurre gli eventi ad alto livello.  
+
+
+Il MotionEvent è un oggetto a basso livello, corrisponde al dato grezzo che il OS produce ogni volta che il dito dell'utente interagisce con il touchscreen.  
+
+onTouchListener è l'ascoltatore di più basso livello che si possa usare, il suo metodo onTouch viene invocato per ogni MotionEvent che si vericica all'interno della view a cui è attaccato, fornisce il controllo totale ma anche tutta la complessità, dovremo noi manualmente interpretare il MotionEvent.  
+Il **GestureDetector** è un aiutante che si mette in mezzo, esiste per evitare di dover lavorare direttamente con i MotionEvent grezzi, esso prende in ingresso un MotionEvent e lo traduce per noi in eventi di alto livello come onFling, onLongPress, ...  
+
