content provider android

--- a/masters/MobileProgramming/teoria/4. ContentProvider.md
+++ b/masters/MobileProgramming/teoria/4. ContentProvider.md
@@ -82,3 +82,62 @@ WHERE display_name = "Mario Rossi"
 - `getContentResolver().query(...)`: metodo che fa la chiamata vera e propria al content provider che ci interessa.  
 - `Cursor c`: corrisponde a un oggetto di tipo puntatore, si posiziona sulla tabella dei risultati. Per leggere i dati dobbiamo scorrere questo cursore riga per riga ed estrarre i valori dalle colonne che abbiamo richiesto  
 
+
+<br>
+
+### Gestione dei permessi: 
+
+In passato i permessi venivano chiesti al momento dell'installazione, in particolare nel Manifest; se l'utente voleva scaricare l'app doveva consentire tutti i permessi richiesti.  
+
+
+Nasce quindi la necessità di avere una maggiore granularità nella gestione dei permessi, infatti a partire da Android 6.0 è stato introdotto il **`RUNTIME PERMISSION HANDLING`**.   
+
+Il nuovo sistema classifica i permessi in **Livelli di protezione**.  
+- Regular: sono permessi 'non invadenti' che una volta dichiarati nel manifest vengono concessi automaticamente 
+- Dangerous: sono permessi che coinvolgono dati sensibili dell'utente, vanno chiesti a runtime, non basta metterli nel manifest.  
+
+
+<center>
+
+Gestione permessi a runtime: esempio
+
+</center>
+
+
+```java
+// 1. Permesso da richiedere
+private static final String PERMESSO = Manifest.permission.READ_CONTACTS;
+private static final int COD_RICHIESTA = 1;
+
+
+// 2. Controllo se dispongo del permesso
+if (checkCallingOrSelfPermission(PERMESSO) != PackageManager.PERMISSION_GRANTED) {
+    // Se entri qui, significa che NON hai il permesso.
+
+    // 4. RICHIEDI IL PERMESSO
+    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.M) {
+        requestPermissions(new String[]{PERMESSO}, COD_RICHIESTA);
+    }
+
+} else {
+    // se entriamo qui, hai già il permesso!
+    // procedi tranquillamente con la tua query...
+}
+```
+
+Questo processo è **asincrono**, la chiamata a `requestPermission` non blocca l'app, mostra il popup di dialogo e continua a girare, la risposta dell'utente arriverà in un metodo di callback separato.  
+
+Il metodo di callback:  
+
+```java
+@Override
+public void onRequestPermissionsResult(int requestCode, String[] permissions, int[] grantResults) {
+    // ...
+}
+```
+
+- requestCode: è il nostro COD_RICHIESTA precedente, ci permette di capire a quale richiesta stiamo rispondendo 
+- permissions: la lista dei permessi che erano stati richiesti
+- grantResults: array che contiene PERMISSION.GRANTED o PERMISSION.DENIED per ogni permesso richiesto.  
+
+
